Babel Changelog
===============

Version 2.0
-----------

(release date to be decided, codename to be selected)

Version 1.4
-----------

(bugfix release, release date to be decided)

- Fixed a bug that caused deprecated territory codes not being
  converted properly by the subtag resolving.  This for instance
  showed up when trying to use ``und_UK`` as a language code
  which now properly resolves to ``en_GB``.

Version 1.3
-----------

(bugfix release, released on July 29th 2013)

- Fixed a bug in likely-subtag resolving for some common locales.
  This primarily makes ``zh_CN`` work again which was broken
  due to how it was defined in the likely subtags combined with
  our broken resolving.  This fixes #37.
- Fixed a bug that caused pybabel to break when writing to stdout
  on Python 3.
- Removed a stray print that was causing issues when writing to
  stdout for message catalogs.

Version 1.2
-----------

(bugfix release, released on July 27th 2013)

- Included all tests in the tarball.  Previously the include
  skipped past recursive folders.
- Changed how tests are invoked and added separate standalone
  test command.  This simplifies testing of the package for
  linux distributors.

Version 1.1
-----------

(bugfix release, released on July 27th 2013)

- added dummy version requirements for pytz so that it installs
  on pip 1.4.
- Included tests in the tarball.

Version 1.0
-----------

(Released on July 26th 2013, codename Revival)

- support python 2.6, 2.7, 3.3+ and pypy - drop all other versions
- use tox for testing on different pythons
- Added support for the locale plural rules defined by the CLDR.
- Added `format_timedelta` function to support localized formatting of
  relative times with strings such as "2 days" or "1 month" (ticket #126).
- Fixed negative offset handling of Catalog._set_mime_headers (ticket #165).
- Fixed the case where messages containing square brackets would break with
  an unpack error.
- updated to CLDR 23